2009-06-24  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.2.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.2.

2009-05-31  Till Kamppeter <till.kamppeter@gmail.com>

	* configure.ac: Add support for cups-config (bug #349).

2009-05-27  Till Kamppeter <till.kamppeter@gmail.com>

	* renderer.c: Fixed no-return-in-nonvoid-function compiler warning
	  caused by the write_binary_data() function (bug #348).

2009-04-23  Till Kamppeter <till.kamppeter@gmail.com>

	* Re-tagged branch for release 4.0.1.

	* VERSION, README, USAGE, configure.ac: Updated.

2009-04-19  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.1.

	* foomatic-rip.1.in: Added documentation for the configuration file
	  (/etc/foomatic/filter.conf, bug #312), minor text fixes.

	* postscript.c: Fixed segfault when the PPD contains only a
	  default value but not an option for it (like
	  "*DefaultResolution: 600dpi" and the client inserts this as an
	  option setting into the PostScript input data stream (Windows
	  clients do so). Bug #324.

2009-03-30  Till Kamppeter <till.kamppeter@gmail.com>

	* options.c: Custom page sizes were not accepted if one of the three
	  parameters "WidthOffset", "HeightOffset", or "Orientation" of the
	  "PageSize" option in the PPD file did not allow 0 as value.
	  Made error messages for the parameters of custom options more
	  readable.
	
	* foomaticrip.c, options.c: If there are printing system options
	  (like "media" of CUPS) and PPD options (like "PageSize") on the
	  command line and they do the same thing (like choosing the paper
	  size) let the setting of the PPD option always have priority,
	  as this is expected for a CUPS filter (see CUPS STR #3148). This 
	  is done by treating the printing system options before the PPD
	  options. This fixes Ubuntu bug #338999.

2009-03-08  Till Kamppeter <till.kamppeter@gmail.com>

	* renderer.c: Fixed segmentation fault in JCL option handling (bugs